--- a/templates/lk.html
+++ b/templates/lk.html
@@ -40,7 +40,10 @@
                         </div>
                         <h3 class="card-title text-center">Tim</h3>
                         <div class="d-block">
-                            <button class="btn btn-outline-success shadow-none foodplan_green foodplan__border_green">Выйти</button>
+                            <form method="POST" action="{% url 'logout' %}">
+                                {% csrf_token %}
+                                <button class="btn btn-outline-success shadow-none foodplan_green foodplan__border_green">Выйти</button>
+                            </form>
                         </div>
                     </div>
 
