--- a/templates/order.html
+++ b/templates/order.html
@@ -69,7 +69,7 @@
                         <tr>
                             <th scope="row" class="text-start">Срок</th>
                             <td>
-                                <select class="form-select">
+                                <select class="form-select" name="term">
                                     <option value="0" selected>1 мес.</option>
                                     <option value="1">3 мес.</option>
                                     <option value="2">6 мес.</option>
@@ -80,7 +80,7 @@
                         <tr>
                             <th scope="row" class="text-start">Завтраки</th>
                             <td>
-                                <select name="select1" class="form-select">
+                                <select name="breakfast" class="form-select">
                                     <option value="0" selected>&#10004;</option>
                                     <option value="1">&#10008;</option>
                                 </select>
@@ -89,7 +89,7 @@
                         <tr>
                             <th scope="row" class="text-start">Обеды</th>
                             <td>
-                                <select name="select2" class="form-select">
+                                <select name="lunch" class="form-select">
                                     <option value="0" selected>&#10004;</option>
                                     <option value="1">&#10008;</option>
                                 </select>
@@ -98,7 +98,7 @@
                         <tr>
                             <th scope="row" class="text-start">Ужины</th>
                             <td>
-                                <select name="select3" class="form-select">
+                                <select name="dinner" class="form-select">
                                     <option value="0" selected>&#10004;</option>
                                     <option value="1">&#10008;</option>
                                 </select>
@@ -107,7 +107,7 @@
                         <tr>
                             <th scope="row" class="text-start">Десерты</th>
                             <td>
-                                <select name="select4" class="form-select">
+                                <select name="dessert" class="form-select">
                                     <option value="0" selected>&#10004;</option>
                                     <option value="1">&#10008;</option>
                                 </select>
@@ -116,7 +116,7 @@
                         <tr>
                             <th scope="row" class="text-start">Кол-во персон</th>
                             <td>
-                                <select name="select5" class="form-select">
+                                <select name="persons" class="form-select">
                                     <option value="0" selected>1</option>
                                     <option value="1">2</option>
                                     <option value="2">3</option>
